# StudentStream

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  heroku.yaml  manage.py  pyproject.toml
StudentStream/: account_adapter.py  asgi.py  settings.py  urls.py  wsgi.py
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templatetags/: graviatartags.py
attendance/: admin.py  models.py  urls.py  views.py
attendance/migrations/: 0001_initial.py
ranks/: admin.py  models.py  urls.py  views.py
ranks/migrations/: 0001_initial.py  0002_rankpromotion.py
students/: models.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_student_payment_id.py
subscriptions/: tests.py  urls.py  views.py
templates/: _base.html  _navbar.html
templates/account/: account_detail.html  account_update.html  login.html  logout.html  signup.html  signup_closed.html
templates/attendance/: check_in.html
templates/errors/: error.html
templates/partials/: attendance_search_results.html  attendance_success.html  payment_connect_ask.html  payment_connect_error.html  payment_connect_success.html  ranks_sort.html  students_ranks.html  sub_card.html
templates/ranks/: rank_create.html  rank_delete.html  rank_list.html  rank_update.html
templates/students/: student_create.html  student_delete.html  student_detail.html  student_list.html  student_update.html
templates/subscriptions/: sub.html  subscription_details.html  subscription_list.html
