[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "StudentStream.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=."

[tool.coverage.run]
omit = ["*/migrations/*"]

[tool.ruff]
extend-exclude = [
    "*/migrations/*"
]

[tool.poetry]
name = "studentstream"
version = "0.1.0"
description = "A student management system for karate studios"
authors = ["Andrew Litman <litmanandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2-binary = "2.9.3"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-allauth = "^0.54.0"
environs = {extras = ["django"], version = "^9.5.0"}
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
squareup = "^27.0.0.20230517"
sentry-sdk = {extras = ["django"], version = "^1.24.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
